agregando swagger